# NetworkDispatcher

./: .gitignore  CMakeLists.txt  README.md
include/: Network.hpp  Node.hpp  network_common.hpp
src/: Network.hpp  Node.hpp  errors.h  main.cpp  network_common.hpp
